// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`create-tinybase > js-react > should match snapshot 1`] = `
{
  "README.md": "# test-js-react

A TinyBase app built with JavaScript and React.

## Getting Started

\`\`\`bash
npm install
npm run dev
\`\`\`

## Learn More

- [TinyBase Documentation](https://tinybase.org)
- [TinyBase Examples](https://tinybase.org/demos/)
",
  "index.html": "<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <link rel="preconnect" href="https://fonts.googleapis.com" />
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
    <link
      rel="stylesheet"
      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;800&display=swap"
    />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <title>TinyBase / JavaScript + React</title>
  </head>

  <body>
    <div id="app"></div>
    <script type="module" src="/src/index.jsx"></script>
  </body>
</html>
",
  "package.json": "{
  "name": "test-js-react",
  "version": "1.0.0",
  "scripts": {
    "dev": "vite",
    "build": "vite build",
    "preview": "vite preview"
  },
  "devDependencies": {
    "vite": "^7.1.3",
    "@vitejs/plugin-react": "^4.3.4"
  },
  "dependencies": {
    "tinybase": "^7.3.1",
    "react": "^19.2.3",
    "react-dom": "^19.2.3"
  }
}
",
  "public/favicon.svg": "<svg viewBox="0 0 680 680" xmlns="http://www.w3.org/2000/svg" style="width:680px;height:680px">
  <path stroke="#fff" stroke-width="80" fill="none"
    d="M340 617a84 241 90 11.01 0zM131 475a94 254 70 10428-124 114 286 70 01-428 124zm0-140a94 254 70 10428-124 114 286 70 01-428 124zm-12-127a94 254 70 00306 38 90 260 90 01-306-38zm221 3a74 241 90 11.01 0z" />
  <path fill="#d81b60"
    d="M131 475a94 254 70 10428-124 114 286 70 01-428 124zm0-140a94 254 70 10428-124 114 286 70 01-428 124z" />
  <path
    d="M249 619a94 240 90 00308-128 114 289 70 01-308 128zM119 208a94 254 70 00306 38 90 260 90 01-306-38zm221 3a74 241 90 11.01 0z" />
</svg>",
  "src/App.jsx": "import {StrictMode} from 'react';
import {createStore} from 'tinybase';
import {Provider, useCreateStore} from 'tinybase/ui-react';
import {SortedTableInHtmlTable, ValuesInHtmlTable} from 'tinybase/ui-react-dom';
import {Inspector} from 'tinybase/ui-react-inspector';
import {Buttons} from './Buttons';
const App = () => {
  const store = useCreateStore(() => {
    return createStore()
      .setValue('counter', 0)
      .setRow('pets', '0', {name: 'fido', species: 'dog'})
      .setTable('species', {
        dog: {price: 5},
        cat: {price: 4},
        fish: {price: 2},
        worm: {price: 1},
        parrot: {price: 3},
      });
  });
  return (
    <StrictMode>
      <Provider store={store}>
        <header>
          <h1>
            <img src="/favicon.svg" />
            TinyBase / JavaScript + React
          </h1>
        </header>
        <p>
          This is more or less the simplest TinyBase app you could imagine. It
          contains a handful of key-values and tables which are mutated with the
          buttons below, and rendered with plain table components. See the full
          set of <a href="https://tinybase.org/demos/">TinyBase demos</a> for
          more interesting examples!
        </p>
        <Buttons />
        <div>
          <h2>Values</h2>
          <ValuesInHtmlTable />
        </div>
        <div>
          <h2>Pets Table</h2>
          <SortedTableInHtmlTable
            tableId="pets"
            cellId="name"
            limit={5}
            sortOnClick={true}
            className="sortedTable"
            paginator={true}
          />
        </div>
        <Inspector />
      </Provider>
    </StrictMode>
  );
};
export {App};
",
  "src/Buttons.jsx": "import {useAddRowCallback, useSetValueCallback} from 'tinybase/ui-react';
const getRandom = (max = 100) => Math.floor(Math.random() * max);
const Buttons = () => {
  const handleCount = useSetValueCallback(
    'counter',
    () => (value) => (value ?? 0) + 1,
  );
  const handleRandom = useSetValueCallback('random', () => getRandom());
  const handleAddPet = useAddRowCallback('pets', (_, store) => ({
    name: ['fido', 'felix', 'bubbles', 'lowly', 'polly'][getRandom(5)],
    species: store.getRowIds('species')[getRandom(5)],
  }));
  return (
    <div id="buttons">
      <button onClick={handleCount}>Increment number</button>
      <button onClick={handleRandom}>Random number</button>
      <button onClick={handleAddPet}>Add a pet</button>
    </div>
  );
};
export {Buttons};
",
  "src/index.css": "body {
  color: #bbb;
  background: #111;
  font-family: 'Inter', sans-serif;
  user-select: none;
}

#app {
  max-width: 40rem;
  margin: 2rem auto;
  display: grid;
  grid-template-columns: 1fr;
  column-gap: 2rem;
  align-items: start;
  row-gap: 1rem;
}

a {
  color: #bbb;
}

h1 {
  font-weight: 600;
  img {
    margin-right: 1rem;
    height: 2.5rem;
    vertical-align: text-bottom;
  }
}

h2 {
  font-weight: 800;
  font-size: 1.3rem;
  margin: 1rem 0 0;
}

p {
  margin: 0 0 1rem;
  line-height: 1.5;
}

details {
  border: 1px solid #333;
  border-radius: 0.25rem;
  padding: 0.5rem;
}

details summary {
  cursor: pointer;
  font-weight: 800;
  margin: -0.5rem -0.5rem 0;
  padding: 0.5rem;
}

details[open] summary {
  margin-bottom: 0.5rem;
  border-bottom: 1px solid #333;
}

pre {
  margin: 0;
  white-space: pre-wrap;
  word-wrap: break-word;
}

#buttons {
  border: solid #666;
  border-width: 1px 0;
  text-align: center;
}

#buttons button {
  border: 1px solid #666;
  border-radius: 0.25rem;
  padding: 0.5rem 1rem;
  background: #222;
  color: #fff;
  font-family: inherit;
  font-weight: 800;
  font-size: 0.8rem;
  width: 10rem;
  margin: 1rem;
}
#buttons button:hover {
  border-color: #d81b60;
}

table {
  border-collapse: collapse;
  font-size: inherit;
  line-height: inherit;
  margin-top: 0.5rem;
  table-layout: fixed;
  width: 100%;
  margin-bottom: 2rem;
  caption-side: bottom;
}
table caption {
  text-align: left;
  button {
    border: 0;
    margin-right: 0.25rem;
  }
}
table caption button {
  line-height: 0.7rem;
  margin: 0 0.25rem 0 0;
  vertical-align: middle;
}
th,
td {
  padding: 0.25rem 0.5rem 0.25rem 0;
  text-align: left;
}
thead th,
thead td {
  border: solid #999;
  border-width: 1px 0;
}
tbody th,
tbody td {
  border-bottom: 1px solid #333;
}

table.sortedTable thead th {
  cursor: pointer;
}

@media (min-width: 40rem) {
  #app {
    grid-template-columns: 1fr 1fr;
  }
  header,
  p,
  #buttons {
    grid-column: span 2;
  }
}
",
  "src/index.jsx": "import './index.css';
import ReactDOM from 'react-dom/client';
import {App} from './App';
addEventListener('load', () =>
  ReactDOM.createRoot(document.getElementById('app')).render(<App />),
);
",
  "vite.config.js": "import {defineConfig} from 'vite';
import react from '@vitejs/plugin-react';

export default defineConfig({
  plugins: [
    react({
      jsxRuntime: 'automatic',
    }),
  ],
});
",
}
`;

exports[`create-tinybase > js-vanilla > should match snapshot 1`] = `
{
  "README.md": "# test-js-vanilla

A TinyBase app built with JavaScript and Vanilla JS.

## Getting Started

\`\`\`bash
npm install
npm run dev
\`\`\`

## Learn More

- [TinyBase Documentation](https://tinybase.org)
- [TinyBase Examples](https://tinybase.org/demos/)
",
  "index.html": "<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <link rel="preconnect" href="https://fonts.googleapis.com" />
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
    <link
      rel="stylesheet"
      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;800&display=swap"
    />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <title>TinyBase / JavaScript</title>
  </head>

  <body>
    <div id="app">
      <header>
        <h1>
          <img src="/favicon.svg" />
          TinyBase / JavaScript
        </h1>
      </header>
      <p>
        This is more or less the simplest TinyBase app you could imagine. It
        contains a handful of key-values and tables which are mutated with the
        buttons below. There's no fancy rendering - just the raw JSON of the
        underlying store. See the full set of
        <a href="https://tinybase.org/demos/">TinyBase demos</a> for more
        interesting examples!
      </p>
      <div id="buttons">
        <button id="countButton">Increment number</button>
        <button id="randomButton">Random number</button>
        <button id="addPetButton">Add a pet</button>
      </div>
      <details open>
        <summary>Values</summary>
        <pre id="valuesJson"></pre>
      </details>
      <details open>
        <summary>Tables</summary>
        <pre id="tablesJson"></pre>
      </details>
    </div>
    <script type="module" src="/src/index.js"></script>
  </body>
</html>
",
  "package.json": "{
  "name": "test-js-vanilla",
  "version": "1.0.0",
  "scripts": {
    "dev": "vite",
    "build": "vite build",
    "preview": "vite preview"
  },
  "devDependencies": {
    "vite": "^7.1.3"
  },
  "dependencies": {
    "tinybase": "^7.3.1"
  }
}
",
  "public/favicon.svg": "<svg viewBox="0 0 680 680" xmlns="http://www.w3.org/2000/svg" style="width:680px;height:680px">
  <path stroke="#fff" stroke-width="80" fill="none"
    d="M340 617a84 241 90 11.01 0zM131 475a94 254 70 10428-124 114 286 70 01-428 124zm0-140a94 254 70 10428-124 114 286 70 01-428 124zm-12-127a94 254 70 00306 38 90 260 90 01-306-38zm221 3a74 241 90 11.01 0z" />
  <path fill="#d81b60"
    d="M131 475a94 254 70 10428-124 114 286 70 01-428 124zm0-140a94 254 70 10428-124 114 286 70 01-428 124z" />
  <path
    d="M249 619a94 240 90 00308-128 114 289 70 01-308 128zM119 208a94 254 70 00306 38 90 260 90 01-306-38zm221 3a74 241 90 11.01 0z" />
</svg>",
  "src/app.js": "import {createStore} from 'tinybase';
const onClick = (id, onClick2) =>
  document.getElementById(id).addEventListener('click', onClick2);
const updateJson = (id, content) =>
  (document.getElementById(id).innerText = JSON.stringify(content, null, 2));
const getRandom = (max = 100) => Math.floor(Math.random() * max);
const app = () => {
  const store = createStore();
  onClick('countButton', () => store.setValue('counter', (value) => value + 1));
  onClick('randomButton', () => store.setValue('random', getRandom()));
  onClick('addPetButton', () =>
    store.addRow('pets', {
      name: ['fido', 'felix', 'bubbles', 'lowly', 'polly'][getRandom(5)],
      species: store.getRowIds('species')[getRandom(5)],
    }),
  );
  store.addValuesListener(() => updateJson('valuesJson', store.getValues()));
  store.addTablesListener(() => updateJson('tablesJson', store.getTables()));
  store
    .setValue('counter', 0)
    .setRow('pets', '0', {name: 'fido', species: 'dog'})
    .setTable('species', {
      dog: {price: 5},
      cat: {price: 4},
      fish: {price: 2},
      worm: {price: 1},
      parrot: {price: 3},
    });
};
export {app};
",
  "src/index.css": "body {
  color: #bbb;
  background: #111;
  font-family: 'Inter', sans-serif;
  user-select: none;
}

#app {
  max-width: 40rem;
  margin: 2rem auto;
  display: grid;
  grid-template-columns: 1fr;
  column-gap: 2rem;
  align-items: start;
  row-gap: 1rem;
}

a {
  color: #bbb;
}

h1 {
  font-weight: 600;
  img {
    margin-right: 1rem;
    height: 2.5rem;
    vertical-align: text-bottom;
  }
}

h2 {
  font-weight: 800;
  font-size: 1.3rem;
  margin: 1rem 0 0;
}

p {
  margin: 0 0 1rem;
  line-height: 1.5;
}

details {
  border: 1px solid #333;
  border-radius: 0.25rem;
  padding: 0.5rem;
}

details summary {
  cursor: pointer;
  font-weight: 800;
  margin: -0.5rem -0.5rem 0;
  padding: 0.5rem;
}

details[open] summary {
  margin-bottom: 0.5rem;
  border-bottom: 1px solid #333;
}

pre {
  margin: 0;
  white-space: pre-wrap;
  word-wrap: break-word;
}

#buttons {
  border: solid #666;
  border-width: 1px 0;
  text-align: center;
}

#buttons button {
  border: 1px solid #666;
  border-radius: 0.25rem;
  padding: 0.5rem 1rem;
  background: #222;
  color: #fff;
  font-family: inherit;
  font-weight: 800;
  font-size: 0.8rem;
  width: 10rem;
  margin: 1rem;
}
#buttons button:hover {
  border-color: #d81b60;
}

table {
  border-collapse: collapse;
  font-size: inherit;
  line-height: inherit;
  margin-top: 0.5rem;
  table-layout: fixed;
  width: 100%;
  margin-bottom: 2rem;
  caption-side: bottom;
}
table caption {
  text-align: left;
  button {
    border: 0;
    margin-right: 0.25rem;
  }
}
table caption button {
  line-height: 0.7rem;
  margin: 0 0.25rem 0 0;
  vertical-align: middle;
}
th,
td {
  padding: 0.25rem 0.5rem 0.25rem 0;
  text-align: left;
}
thead th,
thead td {
  border: solid #999;
  border-width: 1px 0;
}
tbody th,
tbody td {
  border-bottom: 1px solid #333;
}

table.sortedTable thead th {
  cursor: pointer;
}

@media (min-width: 40rem) {
  #app {
    grid-template-columns: 1fr 1fr;
  }
  header,
  p,
  #buttons {
    grid-column: span 2;
  }
}
",
  "src/index.js": "import './index.css';
import {app} from './app';
addEventListener('load', app);
",
}
`;

exports[`create-tinybase > ts-react > should match snapshot 1`] = `
{
  "README.md": "# test-ts-react

A TinyBase app built with TypeScript and React.

## Getting Started

\`\`\`bash
npm install
npm run dev
\`\`\`

## Learn More

- [TinyBase Documentation](https://tinybase.org)
- [TinyBase Examples](https://tinybase.org/demos/)
",
  "index.html": "<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <link rel="preconnect" href="https://fonts.googleapis.com" />
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
    <link
      rel="stylesheet"
      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;800&display=swap"
    />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <title>TinyBase / TypeScript + React</title>
  </head>

  <body>
    <div id="app"></div>
    <script type="module" src="/src/index.tsx"></script>
  </body>
</html>
",
  "package.json": "{
  "name": "test-ts-react",
  "version": "1.0.0",
  "scripts": {
    "dev": "vite",
    "build": "tsc && vite build",
    "preview": "vite preview"
  },
  "devDependencies": {
    "vite": "^7.1.3",
    "typescript": "^5.9.3",
    "@types/node": "^25.0.3",
    "@types/react": "^19.2.7",
    "@types/react-dom": "^19.2.3",
    "@vitejs/plugin-react": "^4.3.4"
  },
  "dependencies": {
    "tinybase": "^7.3.1",
    "react": "^19.2.3",
    "react-dom": "^19.2.3"
  }
}
",
  "public/favicon.svg": "<svg viewBox="0 0 680 680" xmlns="http://www.w3.org/2000/svg" style="width:680px;height:680px">
  <path stroke="#fff" stroke-width="80" fill="none"
    d="M340 617a84 241 90 11.01 0zM131 475a94 254 70 10428-124 114 286 70 01-428 124zm0-140a94 254 70 10428-124 114 286 70 01-428 124zm-12-127a94 254 70 00306 38 90 260 90 01-306-38zm221 3a74 241 90 11.01 0z" />
  <path fill="#d81b60"
    d="M131 475a94 254 70 10428-124 114 286 70 01-428 124zm0-140a94 254 70 10428-124 114 286 70 01-428 124z" />
  <path
    d="M249 619a94 240 90 00308-128 114 289 70 01-308 128zM119 208a94 254 70 00306 38 90 260 90 01-306-38zm221 3a74 241 90 11.01 0z" />
</svg>",
  "src/App.tsx": "import {StrictMode} from 'react';
import {createStore} from 'tinybase';
import {Provider, useCreateStore} from 'tinybase/ui-react';
import {SortedTableInHtmlTable, ValuesInHtmlTable} from 'tinybase/ui-react-dom';
import {Inspector} from 'tinybase/ui-react-inspector';
import {Buttons} from './Buttons';

export const App = () => {
  const store = useCreateStore(() => {
    // Create the TinyBase Store and initialize the Store's data
    return createStore()
      .setValue('counter', 0)
      .setRow('pets', '0', {name: 'fido', species: 'dog'})
      .setTable('species', {
        dog: {price: 5},
        cat: {price: 4},
        fish: {price: 2},
        worm: {price: 1},
        parrot: {price: 3},
      });
  });

  return (
    <StrictMode>
      <Provider store={store}>
        <header>
          <h1>
            <img src="/favicon.svg" />
            TinyBase / TypeScript + React
          </h1>
        </header>
        <p>
          This is more or less the simplest TinyBase app you could imagine. It
          contains a handful of key-values and tables which are mutated with the
          buttons below, and rendered with plain table components. See the full
          set of <a href="https://tinybase.org/demos/">TinyBase demos</a> for
          more interesting examples!
        </p>
        <Buttons />
        <div>
          <h2>Values</h2>
          <ValuesInHtmlTable />
        </div>
        <div>
          <h2>Pets Table</h2>
          <SortedTableInHtmlTable
            tableId="pets"
            cellId="name"
            limit={5}
            sortOnClick={true}
            className="sortedTable"
            paginator={true}
          />
        </div>
        <Inspector />
      </Provider>
    </StrictMode>
  );
};
",
  "src/Buttons.tsx": "import {useAddRowCallback, useSetValueCallback} from 'tinybase/ui-react';
import type {ValueOrUndefined} from 'tinybase';

// Convenience function for generating a random integer
const getRandom = (max = 100) => Math.floor(Math.random() * max);

export const Buttons = () => {
  // Attach events to the buttons to mutate the data in the TinyBase Store
  const handleCount = useSetValueCallback(
    'counter',
    () => (value: ValueOrUndefined) => ((value ?? 0) as number) + 1,
  );
  const handleRandom = useSetValueCallback('random', () => getRandom());
  const handleAddPet = useAddRowCallback('pets', (_, store) => ({
    name: ['fido', 'felix', 'bubbles', 'lowly', 'polly'][getRandom(5)],
    species: store.getRowIds('species')[getRandom(5)],
  }));

  return (
    <div id="buttons">
      <button onClick={handleCount}>Increment number</button>
      <button onClick={handleRandom}>Random number</button>
      <button onClick={handleAddPet}>Add a pet</button>
    </div>
  );
};
",
  "src/index.css": "body {
  color: #bbb;
  background: #111;
  font-family: 'Inter', sans-serif;
  user-select: none;
}

#app {
  max-width: 40rem;
  margin: 2rem auto;
  display: grid;
  grid-template-columns: 1fr;
  column-gap: 2rem;
  align-items: start;
  row-gap: 1rem;
}

a {
  color: #bbb;
}

h1 {
  font-weight: 600;
  img {
    margin-right: 1rem;
    height: 2.5rem;
    vertical-align: text-bottom;
  }
}

h2 {
  font-weight: 800;
  font-size: 1.3rem;
  margin: 1rem 0 0;
}

p {
  margin: 0 0 1rem;
  line-height: 1.5;
}

details {
  border: 1px solid #333;
  border-radius: 0.25rem;
  padding: 0.5rem;
}

details summary {
  cursor: pointer;
  font-weight: 800;
  margin: -0.5rem -0.5rem 0;
  padding: 0.5rem;
}

details[open] summary {
  margin-bottom: 0.5rem;
  border-bottom: 1px solid #333;
}

pre {
  margin: 0;
  white-space: pre-wrap;
  word-wrap: break-word;
}

#buttons {
  border: solid #666;
  border-width: 1px 0;
  text-align: center;
}

#buttons button {
  border: 1px solid #666;
  border-radius: 0.25rem;
  padding: 0.5rem 1rem;
  background: #222;
  color: #fff;
  font-family: inherit;
  font-weight: 800;
  font-size: 0.8rem;
  width: 10rem;
  margin: 1rem;
}
#buttons button:hover {
  border-color: #d81b60;
}

table {
  border-collapse: collapse;
  font-size: inherit;
  line-height: inherit;
  margin-top: 0.5rem;
  table-layout: fixed;
  width: 100%;
  margin-bottom: 2rem;
  caption-side: bottom;
}
table caption {
  text-align: left;
  button {
    border: 0;
    margin-right: 0.25rem;
  }
}
table caption button {
  line-height: 0.7rem;
  margin: 0 0.25rem 0 0;
  vertical-align: middle;
}
th,
td {
  padding: 0.25rem 0.5rem 0.25rem 0;
  text-align: left;
}
thead th,
thead td {
  border: solid #999;
  border-width: 1px 0;
}
tbody th,
tbody td {
  border-bottom: 1px solid #333;
}

table.sortedTable thead th {
  cursor: pointer;
}

@media (min-width: 40rem) {
  #app {
    grid-template-columns: 1fr 1fr;
  }
  header,
  p,
  #buttons {
    grid-column: span 2;
  }
}
",
  "src/index.tsx": "import './index.css';
import ReactDOM from 'react-dom/client';
import {App} from './App';

addEventListener('load', () =>
  ReactDOM.createRoot(document.getElementById('app')!).render(<App />),
);
",
  "tsconfig.json": "{
  "compilerOptions": {
    "target": "ES2020",
    "useDefineForClassFields": true,
    "module": "ESNext",
    "lib": ["ES2020", "DOM", "DOM.Iterable"],
    "skipLibCheck": true,
    "moduleResolution": "bundler",
    "allowImportingTsExtensions": true,
    "isolatedModules": true,
    "moduleDetection": "force",
    "noEmit": true,
    "jsx": "react-jsx",
    "strict": true,
    "noUnusedLocals": true,
    "noUnusedParameters": true,
    "noFallthroughCasesInSwitch": true,
    "noUncheckedSideEffectImports": true
  },
  "include": ["src"]
}
",
  "vite.config.js": "import {defineConfig} from 'vite';
import react from '@vitejs/plugin-react';

export default defineConfig({
  plugins: [
    react({
      jsxRuntime: 'automatic',
    }),
  ],
});
",
}
`;

exports[`create-tinybase > ts-vanilla > should match snapshot 1`] = `
{
  "README.md": "# test-ts-vanilla

A TinyBase app built with TypeScript and Vanilla JS.

## Getting Started

\`\`\`bash
npm install
npm run dev
\`\`\`

## Learn More

- [TinyBase Documentation](https://tinybase.org)
- [TinyBase Examples](https://tinybase.org/demos/)
",
  "index.html": "<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <link rel="preconnect" href="https://fonts.googleapis.com" />
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
    <link
      rel="stylesheet"
      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;800&display=swap"
    />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <title>TinyBase / TypeScript</title>
  </head>

  <body>
    <div id="app">
      <header>
        <h1>
          <img src="/favicon.svg" />
          TinyBase / TypeScript
        </h1>
      </header>
      <p>
        This is more or less the simplest TinyBase app you could imagine. It
        contains a handful of key-values and tables which are mutated with the
        buttons below. There's no fancy rendering - just the raw JSON of the
        underlying store. See the full set of
        <a href="https://tinybase.org/demos/">TinyBase demos</a> for more
        interesting examples!
      </p>
      <div id="buttons">
        <button id="countButton">Increment number</button>
        <button id="randomButton">Random number</button>
        <button id="addPetButton">Add a pet</button>
      </div>
      <details open>
        <summary>Values</summary>
        <pre id="valuesJson"></pre>
      </details>
      <details open>
        <summary>Tables</summary>
        <pre id="tablesJson"></pre>
      </details>
    </div>
    <script type="module" src="/src/index.ts"></script>
  </body>
</html>
",
  "package.json": "{
  "name": "test-ts-vanilla",
  "version": "1.0.0",
  "scripts": {
    "dev": "vite",
    "build": "tsc && vite build",
    "preview": "vite preview"
  },
  "devDependencies": {
    "vite": "^7.1.3",
    "typescript": "^5.9.3",
    "@types/node": "^25.0.3"
  },
  "dependencies": {
    "tinybase": "^7.3.1"
  }
}
",
  "public/favicon.svg": "<svg viewBox="0 0 680 680" xmlns="http://www.w3.org/2000/svg" style="width:680px;height:680px">
  <path stroke="#fff" stroke-width="80" fill="none"
    d="M340 617a84 241 90 11.01 0zM131 475a94 254 70 10428-124 114 286 70 01-428 124zm0-140a94 254 70 10428-124 114 286 70 01-428 124zm-12-127a94 254 70 00306 38 90 260 90 01-306-38zm221 3a74 241 90 11.01 0z" />
  <path fill="#d81b60"
    d="M131 475a94 254 70 10428-124 114 286 70 01-428 124zm0-140a94 254 70 10428-124 114 286 70 01-428 124z" />
  <path
    d="M249 619a94 240 90 00308-128 114 289 70 01-308 128zM119 208a94 254 70 00306 38 90 260 90 01-306-38zm221 3a74 241 90 11.01 0z" />
</svg>",
  "src/app.ts": "import {createStore} from 'tinybase';

const onClick = (id: string, onClick: () => void) =>
  document.getElementById(id)!.addEventListener('click', onClick);

const updateJson = (id: string, content: unknown) =>
  (document.getElementById(id)!.innerText = JSON.stringify(content, null, 2));

const getRandom = (max = 100) => Math.floor(Math.random() * max);

export const app = () => {
  const store = createStore();

  onClick('countButton', () => store.setValue('counter', (value) => value + 1));
  onClick('randomButton', () => store.setValue('random', getRandom()));
  onClick('addPetButton', () =>
    store.addRow('pets', {
      name: ['fido', 'felix', 'bubbles', 'lowly', 'polly'][getRandom(5)],
      species: store.getRowIds('species')[getRandom(5)],
    }),
  );

  store.addValuesListener(() => updateJson('valuesJson', store.getValues()));
  store.addTablesListener(() => updateJson('tablesJson', store.getTables()));

  store
    .setValue('counter', 0)
    .setRow('pets', '0', {name: 'fido', species: 'dog'})
    .setTable('species', {
      dog: {price: 5},
      cat: {price: 4},
      fish: {price: 2},
      worm: {price: 1},
      parrot: {price: 3},
    });
};
",
  "src/index.css": "body {
  color: #bbb;
  background: #111;
  font-family: 'Inter', sans-serif;
  user-select: none;
}

#app {
  max-width: 40rem;
  margin: 2rem auto;
  display: grid;
  grid-template-columns: 1fr;
  column-gap: 2rem;
  align-items: start;
  row-gap: 1rem;
}

a {
  color: #bbb;
}

h1 {
  font-weight: 600;
  img {
    margin-right: 1rem;
    height: 2.5rem;
    vertical-align: text-bottom;
  }
}

h2 {
  font-weight: 800;
  font-size: 1.3rem;
  margin: 1rem 0 0;
}

p {
  margin: 0 0 1rem;
  line-height: 1.5;
}

details {
  border: 1px solid #333;
  border-radius: 0.25rem;
  padding: 0.5rem;
}

details summary {
  cursor: pointer;
  font-weight: 800;
  margin: -0.5rem -0.5rem 0;
  padding: 0.5rem;
}

details[open] summary {
  margin-bottom: 0.5rem;
  border-bottom: 1px solid #333;
}

pre {
  margin: 0;
  white-space: pre-wrap;
  word-wrap: break-word;
}

#buttons {
  border: solid #666;
  border-width: 1px 0;
  text-align: center;
}

#buttons button {
  border: 1px solid #666;
  border-radius: 0.25rem;
  padding: 0.5rem 1rem;
  background: #222;
  color: #fff;
  font-family: inherit;
  font-weight: 800;
  font-size: 0.8rem;
  width: 10rem;
  margin: 1rem;
}
#buttons button:hover {
  border-color: #d81b60;
}

table {
  border-collapse: collapse;
  font-size: inherit;
  line-height: inherit;
  margin-top: 0.5rem;
  table-layout: fixed;
  width: 100%;
  margin-bottom: 2rem;
  caption-side: bottom;
}
table caption {
  text-align: left;
  button {
    border: 0;
    margin-right: 0.25rem;
  }
}
table caption button {
  line-height: 0.7rem;
  margin: 0 0.25rem 0 0;
  vertical-align: middle;
}
th,
td {
  padding: 0.25rem 0.5rem 0.25rem 0;
  text-align: left;
}
thead th,
thead td {
  border: solid #999;
  border-width: 1px 0;
}
tbody th,
tbody td {
  border-bottom: 1px solid #333;
}

table.sortedTable thead th {
  cursor: pointer;
}

@media (min-width: 40rem) {
  #app {
    grid-template-columns: 1fr 1fr;
  }
  header,
  p,
  #buttons {
    grid-column: span 2;
  }
}
",
  "src/index.ts": "import './index.css';
import {app} from './app';

addEventListener('load', app);
",
  "tsconfig.json": "{
  "compilerOptions": {
    "target": "ES2020",
    "useDefineForClassFields": true,
    "module": "ESNext",
    "lib": ["ES2020", "DOM", "DOM.Iterable"],
    "skipLibCheck": true,
    "moduleResolution": "bundler",
    "allowImportingTsExtensions": true,
    "isolatedModules": true,
    "moduleDetection": "force",
    "noEmit": true,
    "strict": true,
    "noUnusedLocals": true,
    "noUnusedParameters": true,
    "noFallthroughCasesInSwitch": true,
    "noUncheckedSideEffectImports": true
  },
  "include": ["src"]
}
",
}
`;
